--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script> -->
+    <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
+
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   </head>
                   <nav class="navbar navbar-expand-lg " id="nav">
                 <div class="container-fluid">
-                <a class="navbar-brand" href="#">Parkopedia</a>
+                <a class="navbar-brand" href="#">PARK-O-PEDIA</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -41,9 +43,9 @@
                               <input type="text" class="form-control" placeholder="Reg No." aria-label="Username" aria-describedby="addon-wrapping">
                             </div>
                             <div class="input-group flex-nowrap" id="phoneNo">
-                              <input type="text" class="form-control" placeholder="Phone Number" aria-label="Username" aria-describedby="addon-wrapping">
+                              <input type="text" class="form-control" placeholder="Email ID" aria-label="Username" aria-describedby="addon-wrapping" id="emID">
                             </div>
-                            <button type="button" class="btn btn-light" id="bookBT">Book Now</button>
+                            <button type="button" class="btn btn-light" id="bookBT" >Book Now</button>
                   </center>
                 </div>
                 </div>
@@ -56,10 +58,22 @@
               </select><br>
                 <p id="slotFree">0</p>
               </div></div>
+              <div class="container-flex" id="onSpot"><br>
+               <div class="container" id="spotBook"><center><br>
+                             <p id="bSpot">On-Spot Booking</p>
+                             <div id="reader" width="400px"></div>
+               </center></div>
+              </div>
+              <div id="snackbar1">Plot 1 Alloted</div>
+              <div id="snackbar2">Plot 2 Alloted</div>
+              <div id="snackbar3">Plot 3 Alloted</div>
+              <div id="snackbar4">Plot 4 Alloted</div>
+              <div id="snackbar4">No Slots Available</div>
+
 
   <body>
-
-	<script type="module" src="app.js"></script>
+      <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script type="module" src="app.js"></script>
   <script src="//code.tidio.co/usyoendg75dzlmdkei7dica0duz4adfe.js" async></script>
   </body>
 </html>
