--- a/index.html
+++ b/index.html
@@ -72,6 +72,6 @@
   <body>
       <!-- <script src="https://smtpjs.com/v3/smtp.js"></script> -->
     <script type="module" src="app.js"></script>
-  <!-- <script src="//code.tidio.co/usyoendg75dzlmdkei7dica0duz4adfe.js" async></script> -->
+  <script src="//code.tidio.co/usyoendg75dzlmdkei7dica0duz4adfe.js" async></script>
   </body>
 </html>
